<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ghost.vaksin.Order">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alamatKirim"
        android:hint="Alamat Pengiriman"
        android:inputType="text"
        android:editable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Jenis Vaksin"
        android:textStyle="bold"
        android:id="@+id/textView10"
        android:layout_below="@+id/alamatKirim"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText11"
            android:hint="Pilih Tanggal Pengiriman"
            android:layout_above="@+id/linearLayout2"
            android:layout_marginBottom="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_register"
            android:text="Cek Ketersediaan"
            android:id="@+id/button3"
            android:layout_marginBottom="15dp"
            android:textColor="#fefcfc"
            android:textSize="15sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order Vaksin"
            android:id="@+id/klikBayar"
            android:clickable="true"
            android:onClick="bayar"
            android:background="@drawable/btn_login"
            android:textColor="#fefcfc"
            android:textSize="15sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinA"
            android:id="@+id/radioButton1"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinB"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinC"
            android:id="@+id/radioButton3"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinD"
            android:id="@+id/radioButton4"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinE"
            android:id="@+id/radioButton5"
            android:checked="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaksinF"
            android:id="@+id/radioButton6"
            android:checked="false"/>
        <!--RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vaksin Jerap TD"
            android:id="@+id/radioButton7"
            android:checked="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vaksin Jerap DT"
            android:id="@+id/radioButton8"
            android:checked="false"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vaksin Jerap TT"
            android:id="@+id/radioButton9"
            android:checked="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vaksin DTP"
            android:id="@+id/radioButton10"
            android:checked="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vaksin DTP-HB"
            android:id="@+id/radioButton11"
            android:checked="false"/-->
    </RadioGroup>
    </ScrollView>
</RelativeLayout>
